frontend/tests/cases/positive/interfaces/instances/instanceIntervalNoOverlap-2.gr
interface Simple (n : Nat) (m : Interval Nat)

instance Simple n [n..n]

-- should not overlap with previous instance
instance Simple 0 [1..1]
